# island_project

./: Cargo.toml  README.md  index.html
src/: assets.rs  camera.rs  debug.rs  lib.rs  main.rs  mainmenu.rs  paused.rs  state.rs
src/gameplay/: mod.rs
src/items/: inventory.rs  mod.rs
src/levels/: mod.rs
src/physics/: component.rs  mod.rs
src/player/: component.rs  mod.rs
src/startup/: mod.rs
